Fix cattool on mobile

--- a/public/css/sass/common.scss
+++ b/public/css/sass/common.scss
@@ -4605,6 +4605,16 @@ body.side-popup {
   body.upload-page {
     min-width: unset;
     background-color: #f5f6f7;
+    .started header,
+    .wrapper-claim,
+    .wrapper-upload,
+    footer,
+    #template-upload,
+    #template-download,
+    .wrapper-claim,
+    .wrapper-bottom {
+      display: none !important;
+    }
   }
   .unsupported-device {
     display: block;
@@ -4622,44 +4632,9 @@ body.side-popup {
       }
     }
   }
-  .started header,
-  .wrapper-claim,
-  .wrapper-upload,
-  footer,
-  #template-upload,
-  #template-download,
-  .wrapper-claim,
-  .wrapper-bottom {
-    display: none !important;
-  }
+
   .nobrowser {
     display: block !important;
-  }
-  .iepopup.nobrowser {
-    width: 100%;
-  }
-  .iepopup .col-2 {
-    width: 90%;
-    margin: 8% 3% 5% 3%;
-    padding: 1% 2%;
-    min-height: 100px !important;
-    box-shadow: 0px 2px 3px #e9e9e9;
-    border: 1px solid #e6e6e6;
-    border-top: 3px solid #3aa9dd;
-  }
-
-  .iepopup .col-2 a {
-    font-size: 24px;
-  }
-  .iepopup.nobrowser p {
-    line-height: 30px;
-    margin-bottom: 40px;
-    font-size: 24px;
-  }
-
-  .iepopup h3 {
-    font-size: 30px;
-    margin-bottom: 20px;
   }
   .nobrowser .col-a img {
     width: 100px;
